# BedroomParty-RS

./: .gitignore  Cargo.toml
src/: main.rs
src/extras/: a.json  swagger.html  swagger.json
src/service/: mod.rs  models.rs  mongo.rs  server.rs
src/utils/: leaderboard.rs  mod.rs  models.rs  user.rs
src/utils/leaderboard/: get.rs  post.rs
src/utils/user/: get.rs  post.rs
