[package]
name = "bpleaderboard_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
once_cell = "1"
dotenv = "0.15"
mongodb = "2"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.20", features = ["json"]} 
base64 = "0.21"
rand = "0.8"
image = "0.24.7"
actix-files = "0.6.2"
